version alignment fix

--- a/koreai/apps/searchassist/src/app/modules/onboarding/onboarding.component.scss
+++ b/koreai/apps/searchassist/src/app/modules/onboarding/onboarding.component.scss
@@ -10,14 +10,8 @@
       border-radius: 10px;
       background: #fcfcfc;
       display: flex;
-      padding:5px 10px;
       align-items: center;
       justify-content: center;
-      top: 17px;
-      position: absolute;
-      right: 44px;
-      top: 15px;
-
   }
   .close-slider{
       position: absolute;
